--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -13,6 +13,12 @@ mac:
   target: dmg
   category: public.app-category.finance
   icon: build/icon.icns
+win:
+  target: nsis
+  icon: public/logo.png
+nsis:
+  oneClick: false
+  allowToChangeInstallationDirectory: true
 extraResources:
   - from: .next/standalone
     to: standalone
