--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -9,8 +9,14 @@ files:
   - "!src"
   - "!.next"
   - "!public"
+publish:
+  provider: github
+  owner: aruntk
+  repo: centsible
 mac:
-  target: dmg
+  target:
+    - dmg
+    - zip
   category: public.app-category.finance
   icon: build/icon.icns
 win:
