--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "centsible",
-  "version": "0.5.1",
+  "version": "0.6.0",
   "private": true,
   "main": "electron/main.js",
   "scripts": {
@@ -20,6 +20,7 @@
     "ag-grid-community": "^35.0.1",
     "ag-grid-react": "^35.0.1",
     "better-sqlite3": "^11.10.0",
+    "electron-updater": "^6.7.3",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "react": "19.2.3",
@@ -27,14 +28,14 @@
     "recharts": "^3.7.0"
   },
   "devDependencies": {
-    "electron": "^33.0.0",
-    "electron-builder": "^25.0.0",
-    "electron-rebuild": "^3.2.9",
     "@tailwindcss/postcss": "^4",
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "electron": "^33.0.0",
+    "electron-builder": "^25.0.0",
+    "electron-rebuild": "^3.2.9",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
     "tailwindcss": "^4",
