fix android data issues

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "centsible",
-  "version": "0.9.0",
+  "version": "0.11.0",
   "private": true,
   "main": "electron/main.js",
   "scripts": {
@@ -9,12 +9,13 @@
     "start": "next start",
     "lint": "eslint",
     "electron:compile": "tsc -p tsconfig.electron.json",
+    "rebuild:node": "npm rebuild better-sqlite3",
+    "rebuild:electron": "electron-rebuild -f -w better-sqlite3",
     "electron:dev": "npm run build && npm run electron:compile && electron .",
-    "electron:build": "npm run build && npm run electron:compile && electron-builder --mac",
-    "electron:build:win": "npm run build && npm run electron:compile && electron-builder --win",
-    "electron:build:all": "npm run build && npm run electron:compile && electron-builder --mac --win",
+    "electron:build": "npm run rebuild:node && npm run build && npm run electron:compile && npm run rebuild:electron && electron-builder --mac",
+    "electron:build:win": "npm run rebuild:node && npm run build && npm run electron:compile && npm run rebuild:electron && electron-builder --win",
+    "electron:build:all": "npm run rebuild:node && npm run build && npm run electron:compile && npm run rebuild:electron && electron-builder --mac --win",
     "release": "bash scripts/release.sh",
-    "postinstall": "electron-rebuild || true",
     "build:mobile": "mv src/app/api/transactions/\\[id\\] src/app/api/transactions/_id_disabled 2>/dev/null || true && BUILD_TARGET=mobile next build; mv src/app/api/transactions/_id_disabled src/app/api/transactions/\\[id\\] 2>/dev/null || true",
     "cap:sync": "npx cap sync",
     "cap:android": "npx cap open android",
@@ -33,7 +34,7 @@
     "@capacitor/ios": "^8.0.2",
     "ag-grid-community": "^35.0.1",
     "ag-grid-react": "^35.0.1",
-    "better-sqlite3": "^11.10.0",
+    "better-sqlite3": "^12.6.2",
     "electron-updater": "^6.7.3",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
@@ -42,14 +43,14 @@
     "recharts": "^3.7.0"
   },
   "devDependencies": {
+    "@electron/rebuild": "^4.0.3",
     "@tailwindcss/postcss": "^4",
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "electron": "^33.0.0",
-    "electron-builder": "^25.0.0",
-    "electron-rebuild": "^3.2.9",
+    "electron": "^40.1.0",
+    "electron-builder": "^26.7.0",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
     "tailwindcss": "^4",
