--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -36,16 +36,34 @@ nsis:
   oneClick: false
   allowToChangeInstallationDirectory: true
 extraResources:
-  - from: .next/standalone
-    to: standalone
+  - from: .next/standalone/server.js
+    to: standalone/server.js
+  - from: .next/standalone/package.json
+    to: standalone/package.json
+  - from: .next/standalone/.next
+    to: standalone/.next
     filter:
       - "**/*"
+  - from: .next/standalone/node_modules
+    to: standalone/node_modules
+    filter:
+      - "**/*"
+      - "!better-sqlite3/**"
   - from: .next/static
     to: standalone/.next/static
     filter:
       - "**/*"
   - from: public
     to: standalone/public
+    filter:
+      - "**/*"
+  - from: node_modules/better-sqlite3
+    to: standalone/node_modules/better-sqlite3
+    filter:
+      - "**/*"
+  # Copy Electron-rebuilt better-sqlite3 to hashed name for Turbopack
+  - from: node_modules/better-sqlite3
+    to: standalone/node_modules/better-sqlite3-90e2652d1716b047
     filter:
       - "**/*"
   - from: public/logo.png
