--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "centsible",
-  "version": "0.11.0",
+  "version": "0.12.0",
+  "description": "Personal finance tracker",
+  "author": "Arun",
   "private": true,
   "main": "electron/main.js",
   "scripts": {
@@ -12,9 +14,9 @@
     "rebuild:node": "npm rebuild better-sqlite3",
     "rebuild:electron": "electron-rebuild -f -w better-sqlite3",
     "electron:dev": "npm run build && npm run electron:compile && electron .",
-    "electron:build": "npm run rebuild:node && npm run build && npm run electron:compile && npm run rebuild:electron && electron-builder --mac",
-    "electron:build:win": "npm run rebuild:node && npm run build && npm run electron:compile && npm run rebuild:electron && electron-builder --win",
-    "electron:build:all": "npm run rebuild:node && npm run build && npm run electron:compile && npm run rebuild:electron && electron-builder --mac --win",
+    "electron:build": "bash scripts/electron-build.sh mac",
+    "electron:build:win": "bash scripts/electron-build.sh win",
+    "electron:build:all": "bash scripts/electron-build.sh mac && bash scripts/electron-build.sh win",
     "release": "bash scripts/release.sh",
     "build:mobile": "mv src/app/api/transactions/\\[id\\] src/app/api/transactions/_id_disabled 2>/dev/null || true && BUILD_TARGET=mobile next build; mv src/app/api/transactions/_id_disabled src/app/api/transactions/\\[id\\] 2>/dev/null || true",
     "cap:sync": "npx cap sync",
@@ -50,7 +52,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "electron": "^40.1.0",
-    "electron-builder": "^26.7.0",
+    "electron-builder": "^24.13.3",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
     "tailwindcss": "^4",
